test-ui/ui/msg_send_id_invalid_receiver.stderr
error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, new] };
   |                                          -------------^^^------
   |                                          |            |
   |                                          |            expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note: expected reference `&objc2::runtime::Class`
              found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Allocated<Object>, Shared> = unsafe { msg_send_id![obj, alloc] };
   |                                                     -------------^^^--------
   |                                                     |            |
   |                                                     |            expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |                                                     arguments to this function are incorrect
   |
   = note: expected reference `&objc2::runtime::Class`
              found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init] };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<Allocated<_>, _>>`
           found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![cls, init] };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Class`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<Allocated<_>, _>>`
           found reference `&objc2::runtime::Class`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init] };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found struct `Id`
   |                                          arguments to this function are incorrect
   |
   = note: expected enum `Option<Id<Allocated<_>, _>>`
            found struct `Id<objc2::runtime::Object, Shared>`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init] };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected struct `Allocated`, found struct `objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note: expected enum `Option<Id<Allocated<_>, _>>`
              found enum `Option<Id<objc2::runtime::Object, Shared>>`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<U, O>>(
   |               ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Id<objc2::runtime::Object, Shared>: MessageReceiver` is not satisfied
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, copy] };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            the trait `MessageReceiver` is not implemented for `Id<objc2::runtime::Object, Shared>`
   |                                          required by a bound introduced by this call
   |
   = help: the following other types implement trait `MessageReceiver`:
             &'a Id<T, O>
             &'a mut Id<T, objc2::rc::Owned>
   = note: required for `RetainSemantics<false, false, false, true>` to implement `MsgSendId<Id<objc2::runtime::Object, Shared>, _, _>`
